--- a/Resources/views/AuditFormField/view.html.twig
+++ b/Resources/views/AuditFormField/view.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 <div class="container">
     <div class="span10 offset1">
-        <h3>Field view</h3>
+        <legend>Field view</legend>
         <div class="btn-group">
             <a class="btn btn-mini" href="{{ path( 'wgauditformfield_edit', { 'id': field.id } ) }}"><i class="icon-pencil"></i> Edit</a>
             <a class="btn btn-mini dropdown-toggle" data-toggle="dropdown" href="#"><span class="caret"></span></a>
