--- a/Resources/views/AuditFormSection/view.html.twig
+++ b/Resources/views/AuditFormSection/view.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 <div class="container">
     <div class="span10 offset1">
-        <h3>Section: {{ section.title }}</h3>
+        <legend>Section: {{ section.title }}</legend>
         <table class="table table-condensed">
             <thead>
                 <tr>
