--- a/Resources/views/Audit/add.html.twig
+++ b/Resources/views/Audit/add.html.twig
@@ -4,7 +4,11 @@
 
 {% block body %}
 <div class="container">
-    <h3>Create new audit</h3>
+    <legend>Create new audit
+        <button type="submit" class="btn btn-mini">
+            
+        </button>
+    </legend>
     <form id="audit" method="POST" action="">
         <table class="table table-condensed table-hover">
             <thead>
