--- a/Resources/views/Audit/index.html.twig
+++ b/Resources/views/Audit/index.html.twig
@@ -3,12 +3,9 @@
 {% block body %}
 {{ parent() }}
 <div class="container">
-    <div class="span4 offest1">
-        <h3>Audits</h3>
-    </div>
-    <div class="span3 offset4">
-        <a data-toggle="modal" data-target="#modal" href="{{ path( 'wgauditform_list' ) }}" class="btn btn-small">Create new Audit</a>
-    </div>
+    <legend>Audits
+        <a data-toggle="modal" data-target="#modal" href="{{ path( 'wgauditform_list' ) }}" class="btn btn-small pull-right">Create new Audit</a>
+    </legend>
     <div class="span10 offset1">
         <table class="table table-hover">
             <caption>List of completed Audits</caption>
