splitted the routing.yml file

--- a/Resources/views/AuditFormSection/edit.html.twig
+++ b/Resources/views/AuditFormSection/edit.html.twig
@@ -14,29 +14,47 @@
                     <button type="submit" class="btn btn-mini">
                         <i class="icon-ok"></i> Save Section
                     </button>
+                    <noscript>
+                    <a href="#" class="btn btn-mini">
+                        <i class="icon-plus"></i> Add Field
+                    </a>
+                    {% if ufields is not empty %}
+                    <select>
+                        {% for field in ufields %}
+                        <option value="volvo">
+                            <a href="#" class="btn btn-mini">
+                                <i class="icon-plus"></i> {{ field.title }}
+                            </a>
+                        </option>
+                        {% endfor %}
+                    </select>
+                    {% endif %}
+                    <a href="#" class="btn btn-mini">
+                        <i class="icon-remove"></i> Delete Section
+                    </a>
+                    </noscript>
                     <a class="btn btn-mini dropdown-toggle" data-toggle="dropdown" href="#">
                         <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
                         <li>
-                            <a data-toggle="modal" data-target="#modal" class="audit-section-new" href="#">
+                            <a class="audit-section-new" href="#">
                                 <i class="icon-pencil"></i> Add Field
                             </a>
                         </li>
                         {% if ufields is not empty %}
-                        <li class="divider"></li>
                             {% for field in ufields %}
                             <li>
-                                <a data-field-id={{ field.id }} class="audit-field-add" href="{{ path( 'wgauditformsection_add_field', { 'id' : section.id ,'field_id': field.id } ) }}">
+                                <a data-field-id={{ field.id }} class="audit-field-add"
+                                   href="{{ path( 'wgauditformsection_add_field', { 'id' : section.id ,'field_id': field.id } ) }}">
                                     <i class="icon-plus"></i> {{ field.title }}
                                 </a>
                             </li>
                             {% endfor %}
                         {% endif %}
-                        <li class="divider"></li>
                         <li>
                             <a class="audit-section-delete" href="#">
-                                <i class="icon-minus"></i> Delete Section
+                                <i class="icon-remove"></i> Delete Section
                             </a>
                         </li>
                     </ul>
@@ -104,21 +122,28 @@
                     <td>
                         <div class="btn-group">
                             <a class="btn btn-mini"  data-toggle="modal" data-target="#modal" href="{{ path( 'wgauditformfield_view', { 'id': field.id } ) }}">
-                                <i class="icon-eye-open"></i> View Field
+                                <i class="icon-eye-open"></i> View
                             </a>
+                            <noscript>
+                                <a href="{{ path( 'wgauditformfield_edit', { 'id': field.id } ) }}" class="btn btn-mini">
+                                    <i class="icon-pencil"></i> Edit
+                                </a>
+                                <a  href="{{ path( 'wgauditformsection_remove', { 'id' : section.id ,'field_id': field.id } ) }}" class="btn btn-mini">
+                                    <i class="icon-minus"></i> Remove
+                                </a>
+                            </noscript>
                             <a class="btn btn-mini dropdown-toggle" data-toggle="dropdown" href="#">
                                 <span class="caret"></span>
                             </a>
                             <ul class="dropdown-menu">
                                 <li>
                                     <a href="{{ path( 'wgauditformfield_edit', { 'id': field.id } ) }}">
-                                        <i class="icon-pencil"></i> Edit Field
+                                        <i class="icon-pencil"></i> Edit
                                     </a>
                                 </li>
-                                <li class="divider"></li>
                                 <li>
                                     <a class="audit-field-remove" href="{{ path( 'wgauditformsection_remove', { 'id' : section.id ,'field_id': field.id } ) }}">
-                                        <i class="icon-minus"></i> Remove Field
+                                        <i class="icon-minus"></i> Remove
                                     </a>
                                 </li>
                             </ul>
